; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_sdspi_host.c_go_idle_clockout.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_sdspi_host.c_go_idle_clockout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @go_idle_clockout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @go_idle_clockout(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [12 x i32], align 16
  %4 = alloca %struct.TYPE_3__, align 8
  store i32 %0, i32* %2, align 4
  %5 = getelementptr inbounds [12 x i32], [12 x i32]* %3, i64 0, i64 0
  %6 = call i32 @memset(i32* %5, i32 255, i32 48)
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32 80, i32* %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %9 = getelementptr inbounds [12 x i32], [12 x i32]* %3, i64 0, i64 0
  store i32* %9, i32** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 2
  %11 = getelementptr inbounds [12 x i32], [12 x i32]* %3, i64 0, i64 0
  store i32* %11, i32** %10, align 8
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @spi_handle(i32 %12)
  %14 = call i32 @spi_device_transmit(i32 %13, %struct.TYPE_3__* %4)
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @spi_device_transmit(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @spi_handle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
